--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Some legal stuff:
 
 Use this software package at your own risk.  The programmer cannot
 be held liable for any incurred damages, directly or indirectly due to
-the use of this software.
+the use or inability to use this software.
 
 You are encouraged to distribute this package freely.  This package is
 however not to be sold (minor transfer costs excepted) or included in
@@ -29,13 +29,13 @@ Sendmail, smail, MMDF or compatible mailers (in effect any mailer that can
 process RFC-822 compliant mails).
 
 The most important system calls that need to be supported (among others):
-dup(),wait(),getpwent(),fork(),pipe()
+dup(),wait(),getpwnam(),fork(),pipe()
 
 For a more complete list of all library references see "includes.h"
 
 ------------------------------ DESCRIPTION -----------------------------------
 
-The procmail mail processing program. (v2.61 1991/01/31)
+The procmail mail processing program. (v2.70 1992/04/30)
 
 Can be used to create mail-servers, mailing lists, sort your incoming mail
 into separate folders/files (real convenient when subscribing to one or more
@@ -72,8 +72,8 @@ bugs (highly unlikely :-), I would be pleased (well, sort of :-) to hear
 about it.  Please send me the patches or bug report.
 I'll look at them and will try to fix it in a future release.
 (BTW, if you should find any spelling or grammar errors in these files,
-it's not priority one, but if you were sending me mail anyway, don't hesitate
-to point them out to me; I like correct English just as much as you do).
+don't hesitate to point them out to me; I like correct English just as much
+as you do).
 
 Please note that this program essentially is supposed to be static, that
 means no extra features (honouring the VNIX spirit) are supposed to be
@@ -83,19 +83,19 @@ time permits).
 Cheers,
        Stephen R. van den Berg	at RWTH-Aachen, Germany.
 
-Internet E-mail:		berg@messua.informatik.rwth-aachen.de
+Internet E-mail:		berg@pool.informatik.rwth-aachen.de
 				berg@physik.tu-muenchen.de
 
-Or:	P.O.Box 21074
-	6369 ZG Simpelveld
-	The Netherlands
+Snail-Mail:	P.O.Box 21074
+		6369 ZG Simpelveld
+		The Netherlands
 
 ----------------------
 A recent version can be picked up at various comp.sources.misc archives.
 The latest version can be obtained directly from the ftp-archive at:
 
-	amaru.informatik.rwth-aachen.de (137.226.112.31)
+	ftp.informatik.rwth-aachen.de (137.226.112.31)
 
-	as compressed tar file:		pub/unix/procmail.tar.Z		<100KB
+	as compressed tar file:		pub/unix/procmail.tar.Z		<128KB
 	or in compressed shar format:	pub/unix/procmail.0?.Z
 ----------------------
